# PulseUI

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: PulseUIConfig.cmake.in  compiler_warnings.cmake  config.hpp.in
examples/00_example_hello_window/: main.cpp
examples/00_hello_window/: CMakeLists.txt  main.cpp
examples/01_counter_reactive/: main.cpp
examples/01_example_counter_reactive/: CMakeLists.txt
examples/02_example_button/: CMakeLists.txt  main.cpp
examples/03_example_label/: CMakeLists.txt  main.cpp
examples/04_example_text_field/: CMakeLists.txt  main.cpp
examples/05_example_layout/: CMakeLists.txt  main.cpp
examples/06_example_windows_navigation/: CMakeLists.txt  main.cpp
examples/06_exmaple_windows_navigation/: CMakeLists.txt  FirstScreen.cpp  FirstScreen.hpp  SecondScreen.cpp  SecondScreen.hpp
examples/07_example_checkbox/: CMakeLists.txt  main.cpp
include/pulseui/: config.hpp  pulseui.hpp
include/pulseui/core/: executor.hpp  model.hpp  reactive.hpp  scheduler.hpp  store.hpp  subscriptions.hpp
include/pulseui/detail/: placeholder.hpp
include/pulseui/platform/: keys.hpp  platform.hpp  timing.hpp
include/pulseui/ui/: button.hpp  canvas.hpp  checkbox.hpp  click_surface.hpp  column.hpp  container.hpp  input.hpp  label.hpp  layout.hpp  manager.hpp  row.hpp  text_field.hpp  widget.hpp  window.hpp
src/core/: placeholder.cpp
src/platform/cocoa/: aliases.mm  canvas_cg.mm  executor_cocoa.mm  timers_cocoa.mm  window_cocoa.mm
src/platform/win32/: aliases.cpp  canvas_gdi.hpp  executor_win32.cpp  window_win32.cpp
src/ui/: app.mm  app_win32.cpp
